# script-kit-next

./: .gitignore  AGENTS.md  AI_DRIVEN_UX.md  CLEANUP.md  Cargo.toml  DEV.md  GLOSSARY.md  MCP.md  MENU_PLAN.md  PERF_AUDIT.md  README.md  RELEASE.md  SELECTED_TEXT.md  TERM_PLAN.md  TESTING_AUDIT.md  build.rs  package-lock.json  package.json  session-ses_4857.md  tasks.sh  test-script.sh
.github/workflows/: ci.yml  release.yml
.hive/: issues.jsonl
.opencode/plugin/: project-reminders.ts
assets/: Info.plist.ext
audit-docs/: 01-THEME_SYSTEM.md  02-DESIGN_VARIANTS.md  03-COMPONENT_LIBRARY.md  04-LAYOUT_SPACING.md  05-TYPOGRAPHY.md  06-ICON_SYSTEM.md  07-ACCESSIBILITY.md  08-ANIMATIONS.md  09-WINDOW_MANAGEMENT.md  10-RESPONSIVE_RESIZE.md  11-RUST_UNIT_TESTS.md  12-SDK_TESTS.md  13-SMOKE_TESTS.md  14-VISUAL_TESTING.md  15-TEST_INFRASTRUCTURE.md  16-COVERAGE_GAPS.md  17-BEST_PRACTICES.md  18-VISUAL_GRID_AUDIT.md
docs/: BUN_ALTERNATIVES.md  LIST_RENDERING.md  PROTOCOL.md  STORYBOOK_IMPLEMENTATION_PLAN.md
docs/archive/: AI_DRIVEN_UX_PATTERNS.md  AI_DRIVEN_UX_TESTING.md  AUTONOMOUS_APP_TESTING.md
docs/perf/: ASYNC_THREADING.md  CACHING.md  LIST_SCROLL.md  LOGGING.md  MEMORY.md  PROTOCOL.md  RENDERING.md  SCRIPT_SEARCH.md  STARTUP.md
docs/ux/: ACCESSIBILITY.md  ANIMATION_FEEDBACK.md  COMPETITOR_ANALYSIS.md  COMPONENT_LIBRARY.md  DESIGN_VARIANTS.md  ICONS_ASSETS.md  KEYBOARD_NAVIGATION.md  PROMPT_TYPES.md  RECOMMENDATIONS.md  RESPONSIVE_BEHAVIOR.md  TERM_FEATURES.md  TYPOGRAPHY_SPACING.md  VISUAL_DESIGN.md  WINDOW_MANAGEMENT.md
expert-bundles/: .footer.md  .header.md  01-main-app-architecture.md  01-terminal-emulation.md  01b-app-state-handlers.md  01c-app-ui-layer.md  02-protocol-ipc-system.md  02-state-management.md  03-multi-window.md  03-script-executor.md  04-list-virtualization.md  04-terminal-emulator.md  05-editor-templates.md  05-focus-management.md  06-async-execution.md  06-notes-window.md  07-ai-window.md  07-protocol-design.md  08-form-parsing.md  08-macos-platform.md  09-clipboard-history.md  09-hotkeys-keyboard.md  10-clipboard-history.md  10-hotkey-system.md  11-file-watchers.md  12-macos-platform.md  13-script-loading.md  14-editor-prompt.md  15-actions-dialog.md  16-search-fuzzy.md  17-hud-notifications.md  18-frecency.md  19-image-handling.md  20-system-tray.md  21-prompt-overlays.md  22-vibrancy-all-windows.md  23-background-scripts.md  24-ai-chat-actions.md  25-window-position-tracking.md  26-vercel-provider-impl.md  (+39 more)
hooks/: install.sh  pre-commit  pre-push
kit-init/: GUIDE.md  README.md  config-template.ts
plan/: AGENTS_PLAN.md  EXTENSIONS_PLAN.md
rules/: MAX_FILE_SIZE.md
scripts/: config-cli.ts  config-schema.ts  generate-api-tests.ts  kit-sdk.ts  test-harness.ts  test-monitor-positioning.ts  test-runner.ts  test-terminal-visual.ts  visual-test.sh
security-audit/: 01-COMMAND_INJECTION.md  02-IPC_PROTOCOL.md  03-CLIPBOARD_ACCESSIBILITY.md  04-FILESYSTEM.md  05-TERMINAL_PTY.md  06-INPUT_VALIDATION.md  07-MEMORY_SAFETY.md  08-DEPENDENCIES.md  09-PRIVILEGE_MACOS.md  10-SDK_SECURITY.md
src/: action_helpers.rs  action_helpers_tests.rs  actions.rs  app_actions.rs  app_execute.rs  app_impl.rs  app_launcher.rs  app_layout.rs  app_navigation.rs  app_render.rs  builtins.rs  clipboard_history.rs  config.rs  editor.rs  editor_tests.rs  editor_v2.rs  error.rs  execute_script.rs  executor.rs  executor_tests.rs  expand_manager.rs  extension_types.rs  form_prompt.rs  frecency.rs  frontmost_app_tracker.rs  hotkey_pollers.rs  hotkeys.rs  hud_manager.rs  lib.rs  list_item.rs  logging.rs  login_item.rs  main.rs  mcp_kit_tools.rs  mcp_protocol.rs  mcp_resources.rs  mcp_script_tools.rs  mcp_server.rs  mcp_streaming.rs  menu_bar.rs  (+41 more)
src/actions/: builders.rs  constants.rs  dialog.rs  mod.rs  script_utils.rs  types.rs  window.rs
src/agents/: executor.rs  loader.rs  mod.rs  parser.rs  types.rs
src/ai/: config.rs  mod.rs  model.rs  providers.rs  storage.rs  window.rs
src/app_shell/: shell.rs
src/clipboard_history/: blob_store.rs  change_detection.rs  database.rs  image.rs  mod.rs  monitor.rs
src/components/: button.rs  form_fields.rs  form_fields_tests.rs  mod.rs  prompt_footer.rs  scrollbar.rs  shortcut_recorder.rs  text_input.rs  toast.rs  unified_list_item_tests.rs
src/config/: config_tests.rs  defaults.rs  loader.rs  mod.rs  types.rs
src/designs/: apple_hig.rs  brutalist.rs  compact.rs  glassmorphism.rs  group_header_variations.rs  material3.rs  minimal.rs  mod.rs  neon_cyberpunk.rs  paper.rs  playful.rs  retro_terminal.rs  separator_variations.rs  traits.rs
src/executor/: mod.rs  runner.rs  stderr_buffer.rs
src/notes/: actions_panel.rs  browse_panel.rs  mod.rs  storage.rs  window.rs
src/prompts/: arg.rs  div.rs  drop.rs  env.rs  mod.rs  path.rs  select.rs  template.rs
src/protocol/: io.rs  message.rs  mod.rs  semantic_id.rs  types.rs
src/render_prompts/: arg.rs  div.rs  editor.rs  form.rs  other.rs  path.rs  term.rs
src/scripts/: grouping.rs  loader.rs  mod.rs  scheduling.rs  scriptlet_loader.rs  search.rs  types.rs
src/shortcuts/: mod.rs  persistence.rs  registry.rs  types.rs
src/stories/: arg_prompt_stories.rs  button_stories.rs  design_token_stories.rs  footer_action_variations.rs  footer_layout_variations.rs  form_field_stories.rs  mod.rs  (+7 more)
tasks/: 02.md  03.md  04.md  05.md  06.md  07.md  2026-01-05_03-48-22.md  2026-01-05_03-48-31.md  2026-01-05_03-48-40.md  2026-01-05_03-48-48.md  2026-01-05_03-48-57.md  2026-01-05_03-49-06.md  2026-01-05_03-49-13.md  2026-01-05_03-49-23.md  2026-01-05_03-49-30.md  2026-01-05_03-49-38.md  2026-01-05_03-49-51.md  2026-01-05_03-49-57.md  2026-01-05_03-50-06.md  2026-01-05_08-27-59.md  2026-01-05_08-28-06.md  2026-01-05_12-41-30.md  2026-01-05_12-41-37.md  2026-01-05_12-41-44.md  2026-01-05_12-41-51.md  2026-01-05_12-41-58.md  2026-01-05_12-42-17.md  2026-01-05_12-42-23.md  2026-01-05_12-42-30.md  2026-01-05_12-42-37.md  2026-01-05_12-42-44.md  2026-01-05_23-11-09.md  2026-01-05_23-11-24.md  2026-01-05_23-11-37.md  2026-01-05_23-11-45.md  2026-01-05_23-11-53.md  2026-01-05_23-11-59.md
(+173 files in other folders)
