[package]
name = "script-kit-gpui"
version = "0.1.0"
edition = "2021"
default-run = "script-kit-gpui"

[lib]
name = "script_kit_gpui"
path = "src/lib.rs"

[[bin]]
name = "script-kit-gpui"
path = "src/main.rs"

[[bin]]
name = "smoke-test"
path = "src/bin/smoke-test.rs"

[dependencies]
gpui = { git = "https://github.com/zed-industries/zed" }
global-hotkey = "0.7"
notify = "6.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shellexpand = "2.1"
core-graphics = "0.24"
cocoa = "0.26"
objc = "0.2"
dirs = "5.0"
smallvec = "1.15"
syntect = { version = "5.2", default-features = false, features = ["default-syntaxes", "default-themes", "regex-onig"] }
anyhow = "1.0"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter", "time"] }
time = { version = "0.3", features = ["formatting", "macros"] }
tracing-appender = "0.2"
chrono = { version = "0.4", features = ["serde"] }

# Terminal integration dependencies (Tier 2 - Alacritty)
# Versions chosen to match Zed's current known-working configuration (Dec 2025)
portable-pty = "0.8"           # PTY management for process spawning
alacritty_terminal = "0.25"    # Zed uses 0.25.1-rc1, this gets latest 0.25.x stable
vte = "0.15"                   # ANSI escape sequence parser, required by alacritty_terminal 0.25
bitflags = "2.10"              # For cell attribute flags
async-channel = "2.3"          # Async channel for stdin command listener
