[package]
name = "script-kit-gpui"
version = "0.1.0"
edition = "2021"
default-run = "script-kit-gpui"

[lib]
name = "script_kit_gpui"
path = "src/lib.rs"

[[bin]]
name = "script-kit-gpui"
path = "src/main.rs"

[[bin]]
name = "smoke-test"
path = "src/bin/smoke-test.rs"

[[bin]]
name = "storybook"
path = "src/bin/storybook.rs"

[dependencies]
gpui = { git = "https://github.com/zed-industries/zed" }
global-hotkey = "0.7"
notify = "6.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"        # YAML frontmatter parsing for scriptlet bundles
shellexpand = "2.1"
core-graphics = "0.24"
cocoa = "0.26"
objc = "0.2"
dirs = "5.0"
smallvec = "1.15"
syntect = { version = "5.2", default-features = false, features = ["default-syntaxes", "default-themes", "regex-onig"] }
anyhow = "1.0"
thiserror = "2.0"
regex = "1.12"
nucleo-matcher = "0.3"         # High-performance fuzzy matching (10-100x faster than bespoke)
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter", "time"] }
time = { version = "0.3", features = ["formatting", "macros"] }
tracing-appender = "0.2"
chrono = { version = "0.4", features = ["serde"] }

# Text buffer for editor (efficient rope data structure)
ropey = "1.6"

# Terminal integration dependencies (Tier 2 - Alacritty)
# Versions chosen to match Zed's current known-working configuration (Dec 2025)
portable-pty = "0.8"           # PTY management for process spawning
alacritty_terminal = "0.25"    # Zed uses 0.25.1-rc1, this gets latest 0.25.x stable
vte = "0.15"                   # ANSI escape sequence parser, required by alacritty_terminal 0.25
bitflags = "2.10"              # For cell attribute flags
async-channel = "2.3"          # Async channel for stdin command listener

# Selected text functionality (getSelectedText/setSelectedText)
get-selected-text = "0.1"      # Hybrid AX + clipboard fallback for reading selected text
arboard = "3.6"                # Clipboard access for setSelectedText fallback
# Note: We use core-graphics directly for Cmd+V simulation (more reliable than enigo on macOS)
macos-accessibility-client = "0.0.1"  # Permission checking for accessibility APIs

# System tray / menu bar integration
tray-icon = "0.21"                    # Cross-platform tray icon (includes muda for menus)
resvg = "0.45"                        # SVG to PNG conversion for tray icon
usvg = "0.45"                         # SVG parsing (used by resvg)
tiny-skia = "0.11"                    # 2D graphics library for SVG rendering

# Clipboard history storage
rusqlite = { version = "0.31", features = ["bundled"] }
uuid = { version = "1.0", features = ["v4"] }
base64 = "0.22"
lru = "0.12"  # LRU cache for clipboard image eviction
sha2 = "0.10"  # SHA-256 for content hash dedup

# Image decoding for app icons
image = { version = "0.25", default-features = false, features = ["png"] }

# Cross-platform window screenshot capture
xcap = "0.8"

# File modification time handling for icon cache
filetime = "0.2"
glob = "0.3.3"
libc = "0.2.178"

# Keyring integration for secure secret storage (env prompt)
keyring = "3"

# Process monitoring for orphan detection and cleanup
sysinfo = "0.33"

# Non-poisoning mutex (doesn't require .unwrap() on lock)
parking_lot = "0.12"

# Open URLs and files with system default handler
open = "5"

# Storybook infrastructure (compile-time story registration + CLI)
inventory = "0.3"  # Compile-time story registration (same pattern as Zed)
clap = { version = "4", features = ["derive"] }  # CLI argument parsing

# gpui-component - Community UI component library for GPUI (FORKED)
# Fork adds set_selection() method for programmatic text selection (snippet/template support)
# Original: https://github.com/longbridge/gpui-component
# Fork: https://github.com/johnlindquist/gpui-component
gpui-component = { git = "https://github.com/johnlindquist/gpui-component", package = "gpui-component" }

# i18n support required by gpui-component
rust-i18n = "3"

# Core Foundation for CFRunLoop (keyboard monitoring)
core-foundation = "0.10"
foreign-types = "0.5"

# Cron scheduling support
croner = "3.0"                 # Parse and validate cron expressions
english-to-cron = "0.1"        # Convert natural language schedules to cron

# HTTP client for AI provider API calls
ureq = { version = "3", features = ["json"] }

# macOS launch-at-login via SMAppService
smappservice-rs = "0.1"
which = "8.0.0"

[features]
default = ["ocr"]
# Enable tests that interact with system APIs (clipboard, accessibility, hotkeys)
# These tests may have side effects like modifying clipboard, opening dialogs, etc.
# Run with: cargo test --features system-tests
system-tests = []
# OCR support using macOS Vision framework (enabled by default on macOS)
ocr = []
# Performance instrumentation (disabled by default to reduce hot-path overhead)
# Enables key event timing, scroll timing, and rate logging
# Run with: cargo build --features perf
perf = []

[dev-dependencies]
tempfile = "3"

[build-dependencies]
dirs = "5.0"  # For build.rs to copy SDK to ~/.kit/lib/

# macOS bundle metadata for cargo-bundle
# Run: cargo bundle --release
[package.metadata.bundle]
name = "Script Kit"
identifier = "com.scriptkit.app"
icon = ["assets/icon.png", "assets/icon@2x.png", "assets/icon.icns"]
version = "0.1.0"
copyright = "Copyright (c) 2024 Script Kit. All rights reserved."
category = "public.app-category.developer-tools"
short_description = "Automation made simple"
osx_minimum_system_version = "10.15"
osx_url_schemes = ["scriptkit"]
resources = ["assets/*"]
# LSUIElement makes app an "agent app" - no menu bar, no Dock icon (like Raycast)
osx_info_plist_exts = ["assets/Info.plist.ext"]
